# habesha-names

./: .gitignore  AGENT_KICKOFF.md  ARCHITECTURE.md  CHANGELOG.md  DATA_PROVENANCE.md  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  PROGRESS.md  README.md  REPLY_AUDIT.md  check.bat  pyproject.toml  review.py  review_report.txt  verify_claims.py
.github/workflows/: ci.yml  release.yml
scripts/: author_entries.py  benchmark.py  corpuslab.py  eval_corpus.py  gen_fidel_tables.py  gen_golden_pairs.py  mine_candidates.py  smoke_wheel.py
src/habesha_names/: __init__.py  _data.py  gender.py
src/habesha_names/data/: __init__.py  compounds.json  given_names.json  schema.md  titles.json
src/habesha_names/fidel/: __init__.py  normalize.py  syllable.py  tables.py
src/habesha_names/match/: __init__.py  full.py  phonetic.py  token.py
src/habesha_names/parse/: __init__.py  compounds.py  parser.py  titles.py
src/habesha_names/translit/: __init__.py  schemes.py  to_fidel.py  to_latin.py  variants.py
tests/: test_data_loader.py  test_fidel_normalize.py  test_fidel_syllable.py  test_golden.py  test_golden_curated.py  test_guess_gender.py  test_match_full.py  test_match_phonetic.py  test_match_token.py  test_parse.py  test_public_api.py  test_smoke.py  test_to_fidel.py  test_translit_latin.py  test_variants.py
tests/golden/: curated.json  pairs.json
