[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "habesha-names"
dynamic = ["version"]
description = "Ethiopian/Eritrean name intelligence: parsing, transliteration, spelling variants, and patronymic-aware fuzzy matching."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Robel Shemeles" }]
requires-python = ">=3.9"
keywords = [
    "ethiopia",
    "eritrea",
    "amharic",
    "tigrinya",
    "names",
    "transliteration",
    "fuzzy-matching",
    "entity-resolution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.dynamic]
version = { attr = "habesha_names.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
habesha_names = ["py.typed"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
